# XJCheck

./: .gitignore  README.md  findings.md  progress.md  pyproject.toml  task_plan.md
.github/workflows/: windows-package.yml
.planning/oda_process_isolation/: findings.md  progress.md  task_plan.md
.planning/perf_phase3/: task_plan.md
.planning/perf_phase3b1_fix/: findings.md  progress.md  task_plan.md
.planning/performance_lifecycle_audit/: findings.md  performance_audit.md  progress.md  task_plan.md
.planning/performance_optimization_phase1/: findings.md  progress.md  task_plan.md
.planning/performance_optimization_phase2/: findings.md  progress.md  task_plan.md
XJCheck_topology_upgrade_review_v1/: MANIFEST.json  MASTER_TASKBOOK.md  MIGRATION_CHECKLIST.md  README.md  VALIDATION_REPORT.json  VALIDATION_REPORT.md
XJCheck_topology_upgrade_review_v1/configs/: symbol_library.example.yml  topology_v2.example.yml
XJCheck_topology_upgrade_review_v1/docs/: 00_交付说明与审查边界.md  01_实证审查结果.md  02_现有代码审查与根因.md  03_行业最佳实践.md  04_目标架构与依赖方向.md  05_线网抽取算法规格.md  06_符号库与语义恢复.md  07_约束求解与GNN决策.md  08_跨页匹配与规则引擎.md  09_失败闭环与人工复核.md  10_FindingsV2字段与版本策略.md  11_代码改造任务分解.md  12_测试验收与上线门槛.md  13_依赖与数据源清单.md  14_按图种处理策略.md  15_本地Agent执行指令.md
XJCheck_topology_upgrade_review_v1/pseudocode/: 01_pipeline.py  02_geometry_graph.py  03_symbol_port_binding.py  04_constraint_resolver.py  05_cross_page_audit.py
XJCheck_topology_upgrade_review_v1/reports/: benchmark_split_proposal.csv  current_environment_run.md  current_environment_run_manifest.json  inventory_summary.json  page_inventory.csv  preview_inventory.csv  preview_summary.json  project_inventory.csv  static_failure_risk.csv  terminal_strip_inventory.csv  third_group_unseen_title_patterns.csv  tooling_smoke_test.json  tooling_smoke_test.md
XJCheck_topology_upgrade_review_v1/schemas/: issue_v2.schema.json  project_profile.schema.json  (+2 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/oda/: README.md
apps/desktop/src-tauri/resources/sidecar/: README.md
apps/desktop/src-tauri/src/: main.rs  sidecar_runtime.rs
configs/: default.yml  symbol_dependency_library.example.json  symbol_dependency_library.schema.json
doc/: deep-research-report.md  findings.md  human_arbitration_phase98.md  page_task_queue.md  windows-packaging.md  任务书.md
tests/: conftest.py
(+260 files in other folders)
